<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbHorizontal="@drawable/task0_scroll_handle"
    tools:context=".Task1">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic"
        android:gravity="center"
        android:text="@string/instructions_default"
        android:textColor="@color/theme1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/task1_start_button"
        android:onClick="onStartButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hammersmith_one"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="@+id/startButton"
        app:layout_constraintStart_toStartOf="@+id/startButton"
        app:layout_constraintTop_toTopOf="@+id/startButton" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/difficulty_easy"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:fontFamily="@font/basic"
        android:gravity="center"
        android:onClick="clickEasy"
        android:text="@string/difficulty_easy"
        android:textColor="@color/lightGray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/difficulty_medium"
        app:layout_constraintEnd_toStartOf="@+id/difficulty_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/difficulty_medium" />

    <TextView
        android:id="@+id/difficulty_medium"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:fontFamily="@font/basic"
        android:gravity="center"
        android:onClick="clickMedium"
        android:text="@string/difficulty_medium"
        android:textColor="@color/lightGray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/difficulty_hard"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:fontFamily="@font/basic"
        android:gravity="center"
        android:onClick="clickHard"
        android:text="@string/difficulty_hard"
        android:textColor="@color/lightGray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/difficulty_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/difficulty_medium"
        app:layout_constraintTop_toTopOf="@+id/difficulty_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>